#216: changed config file to yaml

--- a/usr/share/braincase/contrib/config
+++ b/usr/share/braincase/contrib/config
@@ -2,14 +2,10 @@
 #
 # WARNING: This file should only be readable by the owner
 # 	run this command: `chmod 700 ~/.braincase/config'
-#
-# Config fields should not have dots in them
 
-# General settings
-export_backups="true";
-export_to="dropbox";
-
-# Dropbox config
-dropbox_user="";
-dropbox_password="";
-dropbox_dir="";
+--- 
+backups: 
+  :export: "true"
+  :export_to: "dropbox"
+  :dropbox_user: dropbox
+  :dropbox_pass: dropbox
