#216: repurposed a dropbox setup script and updated default config
also added python-gpgme to the control since it will required by dropbox setup

--- a/usr/share/braincase/contrib/config
+++ b/usr/share/braincase/contrib/config
@@ -5,7 +5,5 @@
 
 --- 
 backups: 
-  :export: "true"
-  :export_to: "dropbox"
-  :dropbox_user: dropbox
-  :dropbox_pass: dropbox
+  :export: "false"
+  :export_to: ""
