--- a/packages/debian/DEBIAN/control
+++ b/packages/debian/DEBIAN/control
@@ -4,7 +4,7 @@ Section: misc
 Priority: optional
 Architecture: all
 Essential: no
-Depends: git, openssh-server, python2.6, ruby, python-gpgme
+Depends: git, openssh-server, python2.6, ruby, python-gpgme, apache2
 Installed-Size: 16
 Maintainer: James Skene <james.skene@aut.ac.nz>
 Homepage: https://github.com/hamstar/Braincase
