--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "var/lib/dokuwiki/lib/plugins/autobackup"]
 	path = var/lib/dokuwiki/lib/plugins/autobackup
-	url = git@github.com:hamstar/dokuwiki-plugin-autobackup.git
+	url = https://github.com/hamstar/dokuwiki-plugin-autobackup.git
