bugfixes as a result of debugging
changed all the "Error" exceptions to standard RuntimeError and
fixed up some config issues and syntax errors

--- a/etc/braincase/config
+++ b/etc/braincase/config
@@ -2,6 +2,9 @@
 braincase:
   :users_file: "/etc/dokuwiki/users.auth.php"
 
+  :createuser:
+    :log: "/var/log/braincase/createuser.log"
+
   :usersync:
     :users_hash: "/var/lib/braincase/users.hash"
     :log: "/var/log/braincase/usersync.log"
