--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "var/lib/dokuwiki/lib/plugins/autobackup"]
 	path = var/lib/dokuwiki/lib/plugins/autobackup
 	url = https://github.com/hamstar/dokuwiki-plugin-autobackup.git
+[submodule "taratasy"]
+	path = taratasy
+	url = git://github.com/hamstar/taratasy.git
