#244: made the sync manager set passwords from send emails
gets passwords this from the mailq folder

--- a/etc/braincase/config
+++ b/etc/braincase/config
@@ -8,6 +8,7 @@ braincase:
   :usersync:
     :users_hash: "/var/lib/braincase/users.hash"
     :log: "/var/log/braincase/usersync.log"
+    :mailq: "/var/lib/braincase/mailq"
 
   :autodropbox:
     :log: "/var/log/braincase/autodropbox.log"
