--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "var/lib/dokuwiki/lib/tpl/taratasy"]
 	path = var/lib/dokuwiki/lib/tpl/taratasy
 	url = git://github.com/hamstar/taratasy.git
+[submodule "var/lib/dokuwiki/lib/plugins/simpleperms"]
+	path = var/lib/dokuwiki/lib/plugins/simpleperms
+	url = https://github.com/bhavicp/dokuwiki-plugin-simpleperms.git
